// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dispute evidence form needing response, renders correctly 1`] = `
<Section
  className="dispute-evidence-form-container"
>
  <Card
    key="general"
    title="General evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
  </Card>
  <Card
    key="uncategorized"
    title="Additional details"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value=""
    />
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll compile and send it to the cardholder's bank, and then email you once the dispute has been decided.
       
      <strong>
        Evidence submission is final.
      </strong>
    </p>
    <p>
      You can also save this evidence for later editing instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Section>
`;

exports[`Dispute evidence form not needing response, renders correctly 1`] = `
<Section
  className="dispute-evidence-form-container"
>
  <Card
    key="general"
    title="General evidence"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="product_description"
      label="Product Description"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_name"
      label="Customer Name"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_email_address"
      label="Customer Email"
      onChange={[Function]}
      value=""
    />
    <WithInstanceId(TextControl)
      disabled={false}
      key="customer_purchase_ip"
      label="Customer IP Address"
      onChange={[Function]}
      value="127.0.0.1"
    />
  </Card>
  <Card
    key="uncategorized"
    title="Additional details"
  >
    <WithInstanceId(TextareaControl)
      disabled={false}
      key="uncategorized_text"
      label="Additional Details"
      onChange={[Function]}
      value="winning_evidence"
    />
  </Card>
  <Card>
    <p>
      When you submit your evidence, we'll compile and send it to the cardholder's bank, and then email you once the dispute has been decided.
       
      <strong>
        Evidence submission is final.
      </strong>
    </p>
    <p>
      You can also save this evidence for later editing instead of submitting it immediately.
       
      <strong>
        We will automatically submit any saved evidence at the due date.
      </strong>
    </p>
    <CardFooter>
      <ForwardRef(Button)
        isLarge={true}
        isPrimary={true}
        onClick={[Function]}
      >
        Submit Evidence
      </ForwardRef(Button)>
      <ForwardRef(Button)
        isDefault={true}
        isLarge={true}
        onClick={[Function]}
      >
        Save For Later
      </ForwardRef(Button)>
    </CardFooter>
  </Card>
</Section>
`;
